--- a/res/xml/settingsmenu.xml
+++ b/res/xml/settingsmenu.xml
@@ -9,6 +9,7 @@
         <ListPreference android:key="layout" android:dialogIcon="@drawable/icon" android:enabled="true" android:selectable="true" android:positiveButtonText="@string/OK" android:negativeButtonText="@string/Cancel" android:entries="@array/ButtonChoice" android:entryValues="@array/ButtonChoiceVals" android:persistent="true" android:summary="@string/layoutSummary" android:title="@string/layoutTitle" android:dialogTitle="@string/layoutTitle"></ListPreference><CheckBoxPreference
                 android:persistent="true" android:key="reverse-x" android:summary="@string/revXSummary" android:title="@string/revXTitle"/><CheckBoxPreference
                 android:persistent="true" android:key="reverse-y" android:summary="@string/revYSummary" android:title="@string/revYTitle"/>
+                <CheckBoxPreference android:key="axesfloat" android:defaultValue="true" android:summaryOn="@string/axesfloatOn" android:summaryOff="@string/axesfloatOff" android:title="@string/axesfloatTitle"></CheckBoxPreference>
                 
 
     
