Started to add lists and new layout generation. Completely untested.

--- a/res/layout/main2.xml
+++ b/res/layout/main2.xml
@@ -46,12 +46,26 @@
                     android:id="@+id/mouseTab"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" >
+
+                    <ListView
+                        android:id="@+id/mouseList"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1" >
+                    </ListView>
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/slideTab"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" >
+                    
+                    <ListView
+                        android:id="@+id/slideList"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1" >
+                    </ListView>
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
