--- a/res/xml/settingsmenu.xml
+++ b/res/xml/settingsmenu.xml
@@ -4,9 +4,7 @@
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/Settings">
 
-    <PreferenceCategory android:title="@string/pModesCat">
-
-        <ListPreference android:key="layout" android:dialogIcon="@drawable/icon" android:enabled="true" android:selectable="true" android:positiveButtonText="@string/OK" android:negativeButtonText="@string/Cancel" android:entries="@array/ButtonChoice" android:entryValues="@array/ButtonChoiceVals" android:persistent="true" android:summary="@string/layoutSummary" android:title="@string/layoutTitle" android:dialogTitle="@string/layoutTitle"></ListPreference><CheckBoxPreference
+    <PreferenceCategory android:title="@string/pModesCat"><CheckBoxPreference
                 android:persistent="true" android:key="reverse-x" android:summary="@string/revXSummary" android:title="@string/revXTitle"/><CheckBoxPreference
                 android:persistent="true" android:key="reverse-y" android:summary="@string/revYSummary" android:title="@string/revYTitle"/>
                 <CheckBoxPreference android:key="axesfloat" android:defaultValue="true" android:summaryOn="@string/axesfloatOn" android:summaryOff="@string/axesfloatOff" android:title="@string/axesfloatTitle"></CheckBoxPreference>
