--- a/res/values/layoutnames.xml
+++ b/res/values/layoutnames.xml
@@ -4,5 +4,7 @@
     <string name="layout_mouse_simple_desc">Control the mouse by tilting the phone and pressing buttons.</string>
     <string name="layout_mouse_adv">Mouse using a trackpad</string>
     <string name="layout_mouse_adv_desc">Control the mouse using an onscreen trackpad.</string>
+    <string name="layout_slide">Slideshow presenter</string>
+    <string name="layout_slide_desc">Easily advance and control a slideshow presentation on a computer.</string>
     
 </resources>
