--- a/res/layout/layoutitem.xml
+++ b/res/layout/layoutitem.xml
@@ -3,11 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:paddingLeft="5dip" android:paddingRight="6dip" android:paddingTop="6dip" android:paddingBottom="6dip" android:layout_height="wrap_content" android:orientation="vertical">
-	    <TextView android:layout_width="wrap_content" android:text="Title" android:id="@+id/title" android:layout_height="wrap_content" 
+	    <TextView android:layout_width="wrap_content" android:id="@+id/title" android:layout_height="wrap_content" 
 	            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
 	    <TextView android:id="@+id/description"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:textAppearance="?android:attr/textAppearanceSmall"
-	    android:maxLines="4" android:text="Description"></TextView>
+	    android:maxLines="4"></TextView>
 </LinearLayout>
