--- a/res/layout/main2.xml
+++ b/res/layout/main2.xml
@@ -36,7 +36,7 @@
                     <ListView
                         android:id="@+id/jsList"
                         android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
+                        android:layout_height="0dip"
                         android:layout_weight="1" >
                     </ListView>
 
@@ -49,7 +49,7 @@
 
                     <ListView
                         android:id="@+id/mouseList"
-                        android:layout_width="fill_parent"
+                        android:layout_width="0dip"
                         android:layout_height="fill_parent"
                         android:layout_weight="1" >
                     </ListView>
@@ -62,7 +62,7 @@
                     
                     <ListView
                         android:id="@+id/slideList"
-                        android:layout_width="fill_parent"
+                        android:layout_width="0dip"
                         android:layout_height="fill_parent"
                         android:layout_weight="1" >
                     </ListView>
