--- a/res/values/prefstrings.xml
+++ b/res/values/prefstrings.xml
@@ -28,4 +28,6 @@
 <string name="axesfloatTitle">Return axes to center</string>
 <string name="axesfloatOn">On-screen axes will float back to the centre</string>
 <string name="axesfloatOff">On-screen axes will not float back to the centre</string>
+<string name="deviceName">Device Name</string>
+<string name="deviceNameDesc">Identify this device from other devices</string>
 </resources>
