Pushed local working tree (which became corrupted - apologies for lack of commit messages) * UI was improved * Switched to Android SDK 4.0 * Added button clicking using the on-screen touchpad * Much more...

--- a/res/values/about.xml
+++ b/res/values/about.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about1">DroidPad lets you use your phone as a joystick for Windows.</string>
-    <string name="about2">Once you have downloaded &amp; set up DroidPad on your computer, you can either enable Wifi on your phone, or enable USB mode on your computer.</string>
-    <string name="about3">Once connected, you are ready to go! Just enter the game &amp; use your phone to control it!</string>
+    <string name="about1">DroidPad - use an Android device as a joystick, mouse or slideshow remote on Windows and Linux.</string>
+    <string name="about2">Once you have downloaded &amp; set up DroidPad on your computer, select a mode and connect via Wifi or USB</string>
+    <string name="about3"></string>
     <string name="morehelp">More Help</string>
     
 </resources>
