--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/iconlarge" android:layout_alignParentRight="true" android:layout_margin="6dip" android:id="@+id/AboutTitleImage" android:contentDescription="@string/app_name"></ImageView>
-        
-		<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/app_name" android:textSize="40dip" android:layout_margin="6dip" android:id="@+id/AboutTitle" android:layout_toLeftOf="@+id/AboutTitleImage"></TextView>
-		<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/AboutSubtitle" android:layout_margin="6dip" android:layout_toLeftOf="@+id/AboutTitleImage" android:layout_below="@+id/AboutTitle" android:text="@string/about1" android:textSize="16dip"></TextView>
-		<TextView android:layout_below="@+id/AboutTitleImage" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_margin="6dip" android:id="@+id/Details" android:text="@string/about2"></TextView>
-		<TextView android:layout_below="@+id/Details" android:layout_height="wrap_content" android:layout_margin="6dip" android:layout_width="fill_parent" android:id="@+id/Details3" android:text="@string/about3"></TextView>
-		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/GoIntroButton" android:layout_alignParentRight="true" android:layout_below="@+id/Details3" android:text="@string/morehelp"></Button>
-		
-		</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/AboutSubtitle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dip"
+            android:text="@string/about1"
+            android:textSize="16dip" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/Details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dip"
+            android:text="@string/about2" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/Details3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dip"
+            android:text="@string/about3" >
+        </TextView>
+
+        <Button
+            android:id="@+id/GoIntroButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/morehelp" >
+        </Button>
+    </LinearLayout>
+
 </ScrollView>
