--- a/res/layout/buttons.xml
+++ b/res/layout/buttons.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uk.digitalsquid.droidpad2.ButtonView
+    <uk.digitalsquid.droidpad.ButtonView
         android:id="@+id/buttonView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
