Started adding device pairing by QR code.

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -11,7 +11,9 @@
 	    android:alphabeticShortcut="w"
 	    android:id="@+id/wifi" android:icon="@drawable/ic_menu_wifi">
 	</item>
-	<item android:id="@+id/gettingstarted" android:title="@string/gettingstarted" android:icon="@android:drawable/ic_menu_info_details"></item><item
+	<item android:id="@+id/gettingstarted" android:title="@string/gettingstarted" android:icon="@android:drawable/ic_menu_info_details"></item>
+	<item android:id="@+id/pairnewdevice" android:title="@string/pairnewdevice" android:icon="@android:drawable/ic_menu_info_details"></item>
+	<item
 	    android:title="@string/About"
 	    android:id="@+id/about"
 	    android:alphabeticShortcut="a"
