--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="6dip"
             android:text="@string/about1"
-            android:textSize="16dip" >
+            android:textSize="16sp" >
         </TextView>
 
         <TextView
