--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
+<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -8,7 +8,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/AboutSubtitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dip"
@@ -17,7 +16,6 @@
         </TextView>
 
         <TextView
-            android:id="@+id/Details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dip"
@@ -25,7 +23,6 @@
         </TextView>
 
         <TextView
-            android:id="@+id/Details3"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dip"
