--- a/res/layout/main2.xml
+++ b/res/layout/main2.xml
@@ -11,7 +11,6 @@
         android:layout_weight="1" >
 
         <LinearLayout
-            android:id="@+id/linearLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical" >
@@ -44,6 +43,7 @@
 
                 <LinearLayout
                     android:id="@+id/mouseTab"
+                    android:baselineAligned="false"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" >
 
@@ -57,6 +57,7 @@
 
                 <LinearLayout
                     android:id="@+id/slideTab"
+                    android:baselineAligned="false"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" >
                     
