--- a/res/values/prefstrings.xml
+++ b/res/values/prefstrings.xml
@@ -30,5 +30,5 @@
 <string name="axesfloatOff">On-screen axes will not float back to the centre</string>
 <string name="deviceName">Device Name</string>
 <string name="deviceNameDesc">Identify this device from other devices</string>
-<string name="enableUsbDebugRequest">Please enable the \'USB Debugging\' option.</string>
+<string name="enableUsbDebugRequest">Please enable the &#8216;USB Debugging&#8217; option.</string>
 </resources>
